# EZTrain

./: .gitignore  .gitmodules  CLAUDE.md  README.md  deploy_to_drone.sh  main.py  pyproject.toml  run_gpu_full.sh  run_gpu_test.sh  train_log.txt
dtcore/: simple_env.py  trainer.py
models/mjx_brax_policy/: params.pkl  policy
