[project]
name = "dronetrain"
version = "0.1.0"
description = "Train a Crazyflie hover policy with PPO in MuJoCo MJX (brax) and convert it to C code for firmware deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax>=0.12.4",
    "jax>=0.6.2",
    "jax[cuda12]>=0.6.2; sys_platform == 'linux'",
    "joblib>=1.3",
    "matplotlib>=3.10.3",
    "mediapy>=1.2.4",
    "mujoco>=3.3.4",
    "mujoco-mjx>=3.3.4",
    "tensorflow>=2.19.0",
]
